# tiny_computer-test

./: .gitignore  README.md  README.zh.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_eng.yml  config.yml
.github/workflows/: build-apk-ci.yml  build-apk.yml
android/: build.gradle
android/app/: build.gradle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: open_source_libraries.json
app/src/main/cpp/: CMakeLists.txt  tiny_audio_jni.c  tiny_microphone_jni.c.bak
app/src/main/res/drawable/: api_24dp_1f1f1f_fill0_wght400_grad0_opsz24.xml  battery_share_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  cached_24dp_ffffff_fill0_wght400_grad0_opsz24.xml  close_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  computer_sound_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  content_copy_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  content_paste_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  create_new_folder_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  delete_forever_24dp_1f1f1f_fill0_wght400_grad0_opsz24.xml  download_24dp_1f1f1f_fill0_wght400_grad0_opsz24.xml  edit_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  electric_bolt_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  file_permission_request.xml  folder_24dp_eaddff_fill0_wght400_grad0_opsz24.xml  (+8 more)
doc/: intro.en.md  intro.zh.md
extra/cross/: install-hangover  install-hangover-stable
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: main.dart  main.dart.bak  workflow.dart
lib/l10n/: intl_en.arb  intl_zh.arb  intl_zh_Hant.arb
(+122 files in other folders)
